--- a/package.json
+++ b/package.json
@@ -7,10 +7,28 @@
   },
   "description": "Musiclike (web) typography modules.",
   "devDependencies": {
+    "@babel/core": "^7.23.7",
+    "@babel/eslint-parser": "^7.23.3",
+    "@babel/plugin-proposal-decorators": "^7.23.7",
+    "@babel/plugin-transform-runtime": "^7.23.7",
+    "@babel/preset-env": "^7.23.7",
+    "@babel/register": "^7.23.7",
+    "@rollup/plugin-babel": "^6.0.4",
+    "@rollup/plugin-eslint": "^9.0.5",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@tsconfig/node18": "^18.2.2",
     "@types/node": "^20.10.5",
     "commit-and-tag-version": "^12.0.0",
     "commitizen": "^4.3.0",
-    "cz-conventional-changelog": "^3.3.0"
+    "concurrently": "^8.2.2",
+    "cz-conventional-changelog": "^3.3.0",
+    "del-cli": "^5.1.0",
+    "eslint": "^8.56.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.29.1",
+    "mocha": "^10.2.0",
+    "rollup": "^4.9.2",
+    "typescript": "^5.3.3"
   },
   "license": "GPL-3.0-or-later",
   "name": "musiclike",
