build(pitch): update build modules set-up

--- a/babel.config.json
+++ b/babel.config.json
@@ -10,7 +10,8 @@
         ]
       ],
       "test": [
-        "./packages/musiclike-note"
+        "./packages/musiclike-note",
+        "./packages/musiclike-pitch"
         // ,
       ]
     }
