feat(pitch): apply baseline alignment to 4 pixels

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,22 @@
     "airbnb-base"
     // ,
   ],
+  "overrides": [
+    {
+      "files": [
+        "./packages/musiclike-pitch/src/*.js"
+        // ,
+      ],
+      "rules": {
+        "no-restricted-syntax": [
+          "error",
+          "LabeledStatement",
+          "WithStatement"
+          // ,
+        ]
+      }
+    }
+  ],
   "parser": "@babel/eslint-parser",
   "parserOptions": {
     "babelOptions": {
