feat(gebrauchsmusik): remove gebrauchsmusik dep

--- a/packages/musiclike-note/package.json
+++ b/packages/musiclike-note/package.json
@@ -1,8 +1,7 @@
 {
   "author": "Aziz Da <azizdawhat@gmail.com>",
   "dependencies": {
-    "@babel/runtime-corejs3": "^7.23.9",
-    "gebrauchsmusik": "^0.1.0"
+    "@babel/runtime-corejs3": "^7.23.9"
   },
   "description": "Note wraps and parses a CSS <length> to use it as a number.",
   "exports": {
