--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -47,6 +47,14 @@
           // ,
         ]
       }
+    ],
+    "no-use-before-define": [
+      "error",
+      {
+        "classes": true,
+        "functions": false,
+        "variables": true
+      }
     ]
   }
 }
