build: update build modules set-up

--- a/package.json
+++ b/package.json
@@ -7,29 +7,29 @@
   },
   "description": "Musiclike (web) typography modules.",
   "devDependencies": {
-    "@babel/core": "^7.23.9",
-    "@babel/eslint-parser": "^7.23.9",
-    "@babel/plugin-proposal-decorators": "^7.23.9",
-    "@babel/plugin-transform-runtime": "^7.23.9",
-    "@babel/preset-env": "^7.23.9",
+    "@babel/core": "^7.24.0",
+    "@babel/eslint-parser": "^7.23.10",
+    "@babel/plugin-proposal-decorators": "^7.24.0",
+    "@babel/plugin-transform-runtime": "^7.24.0",
+    "@babel/preset-env": "^7.24.0",
     "@babel/register": "^7.23.7",
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-eslint": "^9.0.5",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-terser": "^0.4.4",
     "@tsconfig/node18": "^18.2.2",
-    "@types/node": "^20.11.10",
+    "@types/node": "^20.11.27",
     "commit-and-tag-version": "^12.2.0",
     "commitizen": "^4.3.0",
     "concurrently": "^8.2.2",
     "cz-conventional-changelog": "^3.3.0",
     "del-cli": "^5.1.0",
-    "eslint": "^8.56.0",
+    "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.29.1",
-    "mocha": "^10.2.0",
-    "rollup": "^4.9.6",
-    "typescript": "^5.3.3"
+    "npm-check-updates": "^16.14.15",
+    "rollup": "^4.13.0",
+    "typescript": "^5.4.2"
   },
   "license": "GPL-3.0-or-later",
   "name": "musiclike",
