--- a/packages/musiclike-note/package.json
+++ b/packages/musiclike-note/package.json
@@ -1,19 +1,14 @@
 {
   "author": "Aziz Da <azizdawhat@gmail.com>",
   "dependencies": {
-    "@babel/runtime-corejs3": "^7.24.0"
+    "@babel/runtime-corejs3": "^7.24.0",
+    "@musiclike/programming": "^0.1.0"
   },
   "description": "Note wraps and parses a CSS <length> to use it as a number.",
   "exports": {
-    ".": {
-      "types": "./dist/Note.d.ts",
-      "import": "./dist/Note.js",
-      "require": "./dist/Note.cjs"
-    },
-    "./gebrauchsmusik": {
-      "types": "./dist/gebrauchsmusik.d.ts",
-      "import": "./dist/gebrauchsmusik.js"
-    }
+    "types": "./dist/Note.d.ts",
+    "import": "./dist/Note.js",
+    "require": "./dist/Note.cjs"
   },
   "license": "GPL-3.0-or-later",
   "main": "./dist/Note.cjs",
