feat: add utility functions dep

--- a/packages/musiclike-pitch/package.json
+++ b/packages/musiclike-pitch/package.json
@@ -2,7 +2,8 @@
   "author": "Aziz Da <azizdawhat@gmail.com>",
   "dependencies": {
     "@babel/runtime-corejs3": "^7.24.0",
-    "@musiclike/note": "^0.1.0"
+    "@musiclike/note": "^0.1.0",
+    "gebrauchsmusik": "^0.1.0"
   },
   "exports": {
     "types": "./dist/Pitch.d.ts",
